# warehouse_management

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  warehouse.db  warehouse_management.pyproj  warehouse_management.sln
domain/: models.py  services.py  unit_of_work.py
infrastructure/: database.py  orm.py  repositories.py  unit_of_work.py
